Apply errorprone suggestions